--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,5 +1,5 @@
 project:
-  type: website
+  type: book
   output-dir: docs
 
 about:
@@ -10,52 +10,61 @@ about:
   #     href: https://x.com/UrbanDemog
   #   - icon: github
   #     text: Github
-  #     href: https://github.com/ipeaGIT/access_workshop_WSTLUR_2024
+  #     href: https://github.com/ipeaGIT/oficina_acessibilidade_anpet_2024
 
 execute:
   freeze: auto
 
 lang: en
-website:
-  title: "A crash course on urban accessibility with R"
+book:
+  title: "Um Curso Prático Sobre Acessibilidade Urbana em R"
+  author: 
+  - name: "Rafael H. M. Pereira"
+    email: rafael.pereira@ipea.gov.br
+    url: https://www.urbandemographics.org
+    orcid: 0000-0003-2125-7465
+    affiliation: "Instituto de Pesquisa Econômica Aplicada (Ipea)"
+  chapters:
+    - index.qmd
+    - part: "2. Getting started"
+      chapters:
+        - 2.1_installation.qmd
+        - 2.2_data_requirements.qmd
+    - part: "3. Calculando acessibilidade"
+      chapters:
+        - 3.1_quick_approach.qmd
+        - 3.2_flexible_approach.qmd
+        - 3.3_equity_measures.qmd
+
+  site-url: https://ipeagit.github.io/oficina_acessibilidade_anpet_2024/
+  repo-url: https://github.com/ipeaGIT/oficina_acessibilidade_anpet_2024
   favicon: /images/favicon.png
-  site-url: https://ipeagit.github.io/access_workshop_bogota_2024/
-  repo-url: https://github.com/ipeaGIT/access_workshop_bogota_2024
   sidebar:
     style: "docked"
     search: true
     tools: 
       - icon: github
         text: Github
-        href: https://github.com/ipeaGIT/access_workshop_WSTLUR_2024
+        href: https://github.com/ipeaGIT/oficina_acessibilidade_anpet_2024
       - icon: twitter
         text: twitter
         href: https://x.com/UrbanDemog
-    contents:
-      - index.qmd
-      - section: "2. Getting started"
-        contents:
-          - href: 2.1_installation.qmd
-          - href: 2.2_data_requirements.qmd
-      - section: "3. Calculating accessibility"
-        contents:
-          - href: 3.1_quick_approach.qmd
-          - href: 3.2_flexible_approach.qmd
-          - href: 3.3_equity_measures.qmd
-
-page-navigation: true
-page-footer: 
-  border: false
-  left: "Copyright 2024, Rafael H. M. Pereira" 
-  right: 
-    - icon: github
-      href: https://github.com/ipeaGIT/access_workshop_WSTLUR_2024
+      - icon: linkedin
+        text: linkedin
+        href: https://www.linkedin.com/in/rafael-h-m-pereira/
+  page-navigation: true
+  page-footer: 
+    border: false
+    left: "Copyright 2024, Rafael H. M. Pereira" 
+    right: 
+      - icon: github
+        href: https://github.com/ipeaGIT/oficina_acessibilidade_anpet_2024
 
 
 format:
   html:
     theme:
-      light: zephyr
+      light: cosmo
       dark: slate
     css: styles.css
     toc: true
@@ -68,4 +77,7 @@ editor_options:
   markdown:
     wrap: 72
     canonical: true
+
+google-scholar: true
+code-link: true
 
